--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "connection": "Server=.;Database=ShopManagement;Trusted_Connection=True;"
 }
