--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -10,5 +10,6 @@
     "ExcelPackage": {
       "LicenseContext": "NonCommercial"
     }
-  }
+  },
+  "connection": "Server=tcp:shopmanagementalewil.database.windows.net,1433;Initial Catalog=ShopManagement;Persist Security Info=False;User ID=Application;Password=Admin!123@;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 }
