--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -11,5 +11,5 @@
       "LicenseContext": "NonCommercial"
     }
   },
-  "connection": "Server=tcp:shopmanagementalewil.database.windows.net,1433;Initial Catalog=ShopManagement;Persist Security Info=False;User ID=application123;Password=Test!123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  "connection": "Server=tcp:shopmanagementalewil.database.windows.net,1433;Initial Catalog=ShopManagement1;Persist Security Info=False;User ID=application123;Password=Test!123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 }
